fix space properties card section and scrollbar activity section

--- a/src/Components/NftCollectionHistory/NftCollectionHistory.css
+++ b/src/Components/NftCollectionHistory/NftCollectionHistory.css
@@ -10,6 +10,9 @@
   padding: 15px;
   overflow-y: scroll;
 }
+.nft-collection-history-container::-webkit-scrollbar{
+  display: none;
+}
 .nft-collection-history-wrap{
     width: 579px;
     height: 340px;
