--- a/src/Components/NftCollectionProperties/NftCollectionProperties.css
+++ b/src/Components/NftCollectionProperties/NftCollectionProperties.css
@@ -1,8 +1,8 @@
 .nft-collection-properties-container {
   width: 100%;
-  height: 100%;
+  height: 375px;
   max-width: 620px;
-  max-height: 340px;
+  /* max-height: 380px; */
   /* background-color: red; */
   display: flex;
   justify-content: space-between;
@@ -12,6 +12,7 @@
 .nft-collection-properties-card-container {
   width: 300px;
   height: 100px;
+  margin-top: 20px;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
   border-radius: 13.5142px;
   /* background-color: aqua; */
